<resources>
    <string name="app_name">МАСК.Маркер</string>
    <string name="mask">МАСК</string>
    <string name="login_message">Приложение для сканирования промышленных изделий</string>
    <string name="login_btn">Войти</string>
    <string name="demo_mode">Демо-режим</string>
    <string name="not_specified">не указан</string>
    <string name="not_specified2">не указано</string>
    <string name="not_specified3">не указана</string>
    <string name="no_camera_permissions">Нет разрешений для камеры</string>
    <string name="wrong_login_password">неправильный логин или пароль</string>
    <string name="input_login">Введите логин</string>
    <string name="input_password">Введите пароль</string>
    <string name="terms_conditions">Осуществляя вход вы выражаете согласие с нашими Условиями обслуживания и Политикой конфиденциальности</string>
    <string name="back">Назад</string>
    <string name="internet_unavailable">интернет недоступен</string>
    <string name="result_of_checking">Результат проверки</string>
    <string name="product_not_found">Изделие не найдено, проверьте код</string>
    <string name="password">пароль</string>
    // home
    <string name="get_product_info">Получение подробной информации об изделии</string>
    <string name="recognize">Распознать</string>
    <string name="capitalize">Оприходовать</string>
    <string name="scan_codes_for_pick">Сканировать QR-коды для оприходования изделий</string>
    <string name="creation_ttn">Создание ТТН</string>
    <string name="create_ttn">Создать ТТН</string>
    <string name="create_ttn_full">Создать товарно-транспортную накладную</string>
    <string name="breach">Некондиция</string>
    <string name="send_breach_request">Отправить отчет о некондиционных изделиях</string>
    <string name="exit">Выход</string>
    <string name="logout_title">Выйти из профиля?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    // pick
    <string name="enter_number_accepted_units">Введите количество оприходуемых единиц (шт.)</string>
    <string name="enter_product_length">Введите длину оприходуемой продукции (в погонных метрах)</string>
    <string name="enter_product_weight">Введите вес оприходуемой продукции (в кг)</string>
    <string name="enter_product_volume">Введите объем оприходуемой продукции (в метрах кубических)</string>
    <string name="no_scanned_codes">Отсканированных кодов нет. Выполните повторное сканирование перед отправкой отчета.</string>
    <string name="close">Закрыть</string>
    <string name="enter_email">введите электронную почту для отправки отчета</string>
    <string name="enter_email_warning">введите электронную почту</string>
    <string name="pick_request_sent">Отчет оприходования отправлен</string>
    <string name="permission_rationale">Необходимо разрешение для работы с камерой</string>
    <string name="recognized">Распознано %d из %d</string>
    <string name="ok">OK</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="not_recognized">Не распознано</string>
    <string name="end">Завершить</string>
    <string name="sending_report">Отправка отчета</string>
    <string name="send_report">Отправить отчет</string>
    <string name="product_ist">Список изделий</string>
    <string name="mode_selection">Выбор режима</string>
    <string name="select_pick_mode">Выберите режим, по которому будет выполняться оприходование изделий. Режим по умолчанию позволяет выполнять множественное сканирование QR-кодов.</string>
    <string name="by_default">По умолчанию</string>
    <string name="quantity">Количество</string>
    <string name="simple_pick">Простое оприходование изделий</string>
    <string name="pick_by_quantity">Оприходование изделий по количеству</string>
    <string name="pick_by_length">Оприходование изделий по длине</string>
    <string name="pick_by_weight">Оприходование изделий по весу</string>
    <string name="pick_by_volume">Оприходование изделий по объему</string>
    <string name="pick_unreadable">Оприходование нечитаемых кодов</string>
    <string name="length">Длина</string>
    <string name="weight">Вес</string>
    <string name="volume">Объем</string>
    <string name="damaged_code">Поврежденный код</string>
    <string name="email">email</string>
    // ttn
    <string name="cargo_places">Грузовые места</string>
    <string name="cargo_place">Грузовое место %d</string>
    <string name="cargo_quantity">Количество: %d</string>
    <string name="products">Товары</string>
    <string name="places">Места</string>
    <string name="create">Создать</string>
    <string name="further">Далее</string>
    <string name="no_products">Изделия отсутствуют</string>
    <string name="no_places">Грузовые места не созданы</string>
    <string name="unallocated_goods">Остались нераспределенные товары. Продолжить?</string>
    <string name="vehicle">Транспортное средство</string>
    <string name="invoice">Накладная</string>
    <string name="shipper">отправитель</string>
    <string name="consignee2">получатель</string>
    <string name="carrier">перевозчик</string>
    <string name="customer2">заказчик</string>
    <string name="requisites">Реквизиты</string>
    <string name="freight_cost">стоимость грузоперевозки</string>
    <string name="shipping_cost">стоимость отгрузки</string>
    <string name="gross_weight">масса груза брутто</string>
    <string name="ts_type">тип ТС</string>
    <string name="ts_mark">марка ТС</string>
    <string name="ts_number">номер ТС</string>
    <string name="driver_surname">фамилия водителя</string>
    <string name="driver_name">имя водителя</string>
    <string name="driver_patronymic">отчество водителя</string>
    <string name="driver_phone">мобильный телефон водителя</string>
    <string name="payer">Плательщик</string>
    <string name="ttn_sending">Отправка накладной</string>
    <string name="ttn_sent">Товарно-транспортная накладная создана и отправлена на подписание</string>
    // product
    <string name="description">Описание</string>
    <string name="name">Наименование</string>
    <string name="product_name">Название изделия</string>
    <string name="factory_number">Заводской номер</string>
    <string name="manufacturing_date">Дата изготовления</string>
    <string name="shipping_date">Дата отгрузки</string>
    <string name="specifications">Характеристики</string>
    <string name="characteristics_not_specified">Характеристики не указаны</string>
    <string name="provider">Поставщик</string>
    <string name="manufacturer">Изготовитель</string>
    <string name="manufacturer_name">Наименование изготовителя</string>
    <string name="manufacturer_address">Адрес изготовителя</string>
    <string name="purchasing_department">Отдел закупки</string>
    <string name="customer">Заказчик</string>
    <string name="customer_address">Адрес заказчика</string>
    <string name="consignee">Грузополучатель</string>
    <string name="consignee_address">Адрес грузополучателя</string>
    <string name="destination">Пункт назначения</string>
    <string name="delivery_contract">Договор поставки</string>
    <string name="application">Приложение</string>
    <string name="documentation">Документация</string>
    <string name="documents_not_loaded">Документы не загружены</string>
    // breach
    <string name="send_later">Отправим при восстановлении интернет-соединения</string>
    <string name="breach_request_sent">Отчет о некондиции отправлен</string>
    <string name="write_details">Напишите подробности …</string>
    <string name="enter_description">Введите описание</string>
    <string name="make_photo">Сделать фото</string>
    <string name="viewing_photo">Просмотр фото</string>
    <string name="send">Отправить</string>

    <string-array name="scan_array">
        <item>Отсканирован</item>
        <item>Отсканировано</item>
        <item>Отсканировано</item>
    </string-array>

    <string-array name="codes_array">
        <item>код</item>
        <item>кода</item>
        <item>кодов</item>
    </string-array>

    <string-array name="ts_type_array">
        <item>Автомобиль</item>
        <item>Прицеп</item>
    </string-array>

    <string-array name="companies_array">
        <item>ОАО "Волгограднефтемаш"</item>
        <item>ООО «Газпромнефть-Ямал»</item>
        <item>ООО "НефтеГазКомплект»</item>
    </string-array>
</resources>
