<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_24dp"
    android:background="@drawable/bg_toast">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:textSize="@dimen/text_20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/logout_title" />

    <TextView
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:background="?selectableItemBackground"
        android:fontFamily="sans-serif-medium"
        android:padding="@dimen/margin_16dp"
        android:textColor="@color/white"
        android:textSize="@dimen/text_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ok_btn"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:text="@string/no" />

    <TextView
        android:id="@+id/ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:background="?selectableItemBackground"
        android:fontFamily="sans-serif-medium"
        android:padding="@dimen/margin_16dp"
        android:textColor="@color/white"
        android:textSize="@dimen/text_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:text="@string/yes" />

</androidx.constraintlayout.widget.ConstraintLayout>

