<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_common"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="36dp"
            android:fontFamily="sans-serif"
            android:text="@string/select_pick_mode"
            android:textColor="#9919194D"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/btn_update_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="36dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:stateListAnimator="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_description">

            <ImageView
                android:id="@+id/ic_update_0"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:adjustViewBounds="true"
                android:forceDarkAllowed="false"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_success_settings" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:letterSpacing="0.05"
                    android:text="@string/by_default"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/simple_pick"
                    android:textColor="#9919194D"
                    android:textSize="12sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_update_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:stateListAnimator="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_update_0">

            <ImageView
                android:id="@+id/ic_update_1"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:adjustViewBounds="true"
                android:forceDarkAllowed="false"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_success_settings" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:letterSpacing="0.05"
                    android:text="@string/quantity"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/pick_by_quantity"
                    android:textColor="#9919194D"
                    android:textSize="12sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_update_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:stateListAnimator="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_update_1">

            <ImageView
                android:id="@+id/ic_update_2"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:adjustViewBounds="true"
                android:forceDarkAllowed="false"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_success_settings" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:letterSpacing="0.05"
                    android:text="@string/length"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/pick_by_length"
                    android:textColor="#9919194D"
                    android:textSize="12sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_update_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:stateListAnimator="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_update_2">

            <ImageView
                android:id="@+id/ic_update_3"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:adjustViewBounds="true"
                android:forceDarkAllowed="false"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_success_settings" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:letterSpacing="0.05"
                    android:text="@string/weight"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/pick_by_weight"
                    android:textColor="#9919194D"
                    android:textSize="12sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_update_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:stateListAnimator="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_update_3">

            <ImageView
                android:id="@+id/ic_update_4"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:adjustViewBounds="true"
                android:forceDarkAllowed="false"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_success_settings" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:letterSpacing="0.05"
                    android:text="@string/volume"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/pick_by_volume"
                    android:textColor="#9919194D"
                    android:textSize="12sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_update_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:stateListAnimator="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_update_4">

            <ImageView
                android:id="@+id/ic_update_5"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:adjustViewBounds="true"
                android:forceDarkAllowed="false"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_success_settings" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:letterSpacing="0.05"
                    android:text="@string/damaged_code"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/pick_unreadable"
                    android:textColor="#9919194D"
                    android:textSize="12sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>